--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.5",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "skeleton": "^0.1.2",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -26,6 +34,11 @@
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.1.2",
+    "jest": "^29.7.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5"
   }
 }
